syntax = "proto3";

option go_package = "github.com/let-z-go/pbrpc/protocol";
option (gogoproto.goproto_enum_prefix_all) = false;

import "github.com/gogo/protobuf/gogoproto/gogo.proto";

enum MessageType {
    MESSAGE_REQUEST = 0;
    MESSAGE_RESPONSE = 1;
    MESSAGE_HEARTBEAT = 2;
}

message Greeting {
    message Channel {
        bytes id = 1;
        int32 timeout = 2;
        int32 incoming_window_size = 3;
        int32 outgoing_window_size = 4;
    }

    Channel channel = 1 [ (gogoproto.nullable) = false ];
    bytes handshake = 2;
}

message RequestHeader {
    bytes trace_id = 1;
    int32 sequence_number = 2;
    string service_name = 3;
    string method_name = 4;
}

enum ErrorCode {
    ERROR_NO = 0;
    ERROR_CHANNEL_BUSY = 1;
    ERROR_NOT_FOUND = 2;
    ERROR_BAD_REQUEST = 3;
    ERROR_NOT_IMPLEMENTED = 4;
    ERROR_INTERNAL_SERVER = 5;
    ERROR_USER_DEFINED = 256;
}

message ResponseHeader {
    int32 sequence_number = 1;
    int32 error_code = 2;
}

message Heartbeat {}
